Add form styling and table structure to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -52,8 +52,43 @@
             <label for="foto">Comentarios</label>
            <input type="file" id="foto" accept="image/*">
         </div>
-        <button>Enviar</button>
+        <div>
+            <button>Enviar</button>
+        </div>
     </form>
+
+    <table>
+        <thead>
+            <tr>
+                <th>1</th>
+                <th>2</th>
+                <th>3</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>hola</td>
+                <td>hola</td>
+                <td>hola</td>
+            </tr>
+            <tr>
+                <td>hola</td>
+                <td>hola</td>
+                <td>hola</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>footer</td>
+                <td>footer</td>
+                <td>footer</td>
+            </tr>
+        </tfoot>
+       
+    </table>
+
+
+
 </body>
 
 </html>
